--- a/views/message.ejs
+++ b/views/message.ejs
@@ -1,7 +1,7 @@
 <div class="msg-item">
   <ul>
     <li><%=msg.text %></li>
-    <li><%=msg.user %></li>
-    <li><%=msg.added %></li>
+    <li><%=msg.message %></li>
+    <li><%=msg.created_at %></li>
   </ul>
 </div>
